--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>git</title>
 </head>
 <body>
-	<h2>Git test</h2>
+	<h2>Git</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit mollitia, vel, voluptate officia officiis dolore eos hic modi excepturi rerum. Voluptatem, aliquam! Modi placeat atque enim temporibus pariatur, itaque blanditiis!</p>
 </body>
 </html>
